# inpoly-python

./: .gitignore  .travis.yml  LICENSE.md  MANIFEST.in  README.md  appveyor.yaml  build.py  example.py  pyproject.toml  setup.cfg  setup.py
inpoly/: __init__.py  inpoly2.py  inpoly_.c  inpoly_.pyx
msh/: __init__.py  loadmsh.py  msh_t.py
